re PR middle-end/45955 (FAIL: gcc.dg/initpri1.c (test for excess errors))

PR middle-end/45955
	* ipa.c (build_cdtor): Delete endless loop.

From-SVN: r165308